# UnoLife

./: .gitignore  Cargo.toml  README.md  build.rs  random.rs  unolife_config.json
assets/: unolife_logo.rgba
src/: config.rs  main.rs
src/blackjack/: game.rs
src/breakout/: game.rs  mod.rs  ui.rs
src/components/: animations.rs  application.rs  button.rs  color.rs  mod.rs
src/menu/: config.rs  highscores.rs  mod.rs  ui.rs
src/puzzle15/: game.rs  ui.rs
src/reddit_meme/: ui.rs
src/snake/: game.rs  mod.rs  ui.rs
src/tictactoe/: ai.rs  board.rs  mod.rs  ui.rs
src/twenty48/: game.rs  ui.rs
src/wordle/: game.rs  mod.rs  ui.rs
